# mlc-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  FileUtils.hpp  GeneratorBindings.cpp  GeneratorBindings.hpp  LICENSE  README.md  mlc-cpp.sublime-workspace  mlc.json  mlc.sh
ci/: build_and_install.sh  build_and_upload_bin.sh  tests.sh  update.sh
config/: clone.mlc  test_translate.mlc
configs/: tests.mlc
mlc-cpp/: Class.cpp  Class.hpp  Linker.hpp  Member.cpp  Member.hpp  Method.cpp  Method.hpp  Mlc.cpp  Mlc.hpp  Modifier.h  Object.cpp  Object.hpp  Parser.cpp  Parser.hpp  main.cpp  parser.cpp  parser.hpp  parser_.cpp  parser_.hpp  version.hpp
mlc-cpp.xcodeproj/: project.pbxproj
mlc-cpp/core/: CircularReference.cpp  CircularReference.hpp  DataParser.cpp  Generator.hpp  GeneratorDataStorageBase.cpp  GeneratorDataStorageBase.hpp  GeneratorUnitTestsInterface.cpp  GeneratorUnitTestsInterface.hpp  GeneratorVisitor.cpp  GeneratorVisitor.hpp  Linker.cpp  Linker.hpp  Parser.cpp  Parser.hpp  Registrar.cpp  Registrar.hpp  SavePluginBase.cpp  SavePluginBase.hpp  SerializerBase.cpp  SerializerBase.hpp  TranslatorBase.cpp  TranslatorBase.hpp  WriterBase.cpp  WriterBase.hpp
mlc-cpp/features/: DataParser.cpp  DataParser.hpp  FeatureGenerator.hpp  GeneratorBindings.cpp  GeneratorBindings.hpp  GeneratorDataStorageBase.cpp  GeneratorDataStorageBase.hpp  GeneratorDataStorageCpp.hpp  GeneratorEcsCpp.cpp  GeneratorEcsCpp.hpp  GeneratorOperatorEqualsBase.cpp  GeneratorOperatorEqualsBase.hpp  GeneratorOperatorEqualsCpp.hpp  GeneratorRefCounterCpp.hpp  GeneratorUnitTestsInterface.cpp  GeneratorUnitTestsInterface.hpp  GeneratorVisitor.cpp  GeneratorVisitor.hpp
mlc-cpp/models/: Class.cpp  Class.hpp  Function.cpp  Function.hpp  Model.cpp  Model.hpp  Modifier.h  Object.cpp  Object.hpp  Serialize.hpp
mlc-cpp/module_cpp/: GeneratorCpp.cpp  GeneratorCpp.hpp  GeneratorDataStorageCpp.cpp  GeneratorDataStorageCpp.hpp  GeneratorEcsCpp.cpp  GeneratorEcsCpp.hpp  GeneratorObserverCpp.cpp  GeneratorObserverCpp.hpp  GeneratorOperatorEqualsCpp.cpp  GeneratorOperatorEqualsCpp.hpp  GeneratorPredefinedFilesCpp.cpp  GeneratorPredefinedFilesCpp.hpp  GeneratorRefCounterCpp.cpp  GeneratorRefCounterCpp.hpp  RegexPatternCpp.cpp  RegexPatternCpp.hpp  SavePluginCpp.cpp  SavePluginCpp.hpp  SerializerCpp.cpp  SerializerCpp.hpp  TranslatorCpp.cpp  TranslatorCpp.hpp  WriterCpp.cpp  WriterCpp.hpp  protocols.hpp
mlc-cpp/module_python/: GeneratorDataStoragePython.cpp  GeneratorDataStoragePython.hpp  GeneratorFactoryPython.cpp  GeneratorFactoryPython.hpp  GeneratorObserverPython.cpp  GeneratorObserverPython.hpp  GeneratorOperatorEqualsPython.hpp  GeneratorPackagePython.cpp  GeneratorPackagePython.hpp  GeneratorPredefinedFilesPython.cpp  GeneratorPredefinedFilesPython.hpp  GeneratorPython.cpp  GeneratorPython.hpp  SavePluginPython.cpp  SavePluginPython.hpp  SerializerPython.cpp  SerializerPython.hpp  TranslatorPython.cpp  TranslatorPython.hpp  WriterPython.cpp  WriterPython.hpp  constants_serializers_py.hpp  regex.hpp
mlc-cpp/parser/: Lexer.cpp  Lexer.hpp  ParserLexem.cpp  ParserLexem.hpp
mlc-cpp/plugin/: ecs_generate.py
mlc-cpp/tests/: tests.hpp  tests_models.cpp  tests_parser_lexer.cpp  tests_regex.cpp
mlc-cpp/utils/: ArgsParser.cpp  ArgsParser.hpp  Common.cpp  Common.hpp  Config.cpp  Config.hpp  Error.cpp  Error.hpp  FileUtils.cpp  FileUtils.hpp
scripts/: update_osx.sh
test/: CMakeLists.txt
test/assets/: data.json  data.xml
test/common/: main.cpp
test/config/: clone.mlc  compare.mlc  test.mlc
test/configs/: tests.mlc
tests/: CMakeLists.txt  mlc.json  test_cpp.py  test_py.py
tests/archero/: data.xml
tests/assets/: data.json  data.xml
tests/common/: bindigns.cpp  custom_serialize_json.h  custom_serialize_xml.h  main.cpp
tests/config/: binding.mlc  constructor.mlc  custom_type.mlc  data.mlc  ecs.mlc  function_templates.mlc  static.mlc  test.mlc  test_functions.mlc  test_intrusive_ptr.mlc  test_lang_modifiers.mlc  test_translate.mlc  virtual_methods.mlc
tests/data_json/: bindings.json
tests/data_xml/: data.xml  (+1 more)
tests_ecs/: CMakeLists.txt  mlc.json
tests_serializer/: CMakeLists.txt  mlc.json
(+485 files in other folders)
